// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    data-css-1a26704=""
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
    tabIndex={0}
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="red"
        />
        <div
          data-css-cgsoeo=""
        >
          Red
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="green"
        />
        <div
          data-css-cgsoeo=""
        >
          Green
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="blue"
        />
        <div
          data-css-cgsoeo=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio disabled & error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    data-css-sz0dtt=""
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
    tabIndex={0}
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-8x851q=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="red"
        />
        <div
          data-css-cgsoeo=""
        >
          Red
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-8x851q=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={true}
              data-css-1m80hge=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            >
              <div
                data-css-16yi4o9=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="green"
        />
        <div
          data-css-cgsoeo=""
        >
          Green
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-8x851q=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="blue"
        />
        <div
          data-css-cgsoeo=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    data-css-sz0dtt=""
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
    tabIndex={0}
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-iwspcj=""
            data-css-jg1k2y=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="red"
        />
        <div
          data-css-cgsoeo=""
        >
          Red
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-iwspcj=""
            data-css-jg1k2y=""
          >
            <div
              aria-checked={true}
              data-css-1m80hge=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            >
              <div
                data-css-16yi4o9=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="green"
        />
        <div
          data-css-cgsoeo=""
        >
          Green
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-iwspcj=""
            data-css-jg1k2y=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={null}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={null}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="blue"
        />
        <div
          data-css-cgsoeo=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    data-css-1a26704=""
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
    tabIndex={0}
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-11lyqbs=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="red"
        />
        <div
          data-css-cgsoeo=""
        >
          Red
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-11lyqbs=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={true}
              data-css-1m80hge=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            >
              <div
                data-css-16yi4o9=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="green"
        />
        <div
          data-css-cgsoeo=""
        >
          Green
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-11lyqbs=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="blue"
        />
        <div
          data-css-cgsoeo=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio one selected 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    data-css-1a26704=""
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
    tabIndex={0}
  >
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="red"
        />
        <div
          data-css-cgsoeo=""
        >
          Red
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={true}
              data-css-1m80hge=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            >
              <div
                data-css-16yi4o9=""
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="green"
        />
        <div
          data-css-cgsoeo=""
        >
          Green
        </div>
      </label>
    </div>
    <div
      data-css-xp79s5=""
    >
      <label
        data-css-kn3wr0=""
      >
        <div
          data-css-1gbdc34=""
        >
          <div
            data-css-480533=""
            data-css-iwspcj=""
          >
            <div
              aria-checked={false}
              data-css-dbvyuf=""
              onFocus={[Function]}
              role="radio"
              tabIndex="-1"
            />
          </div>
        </div>
        <input
          checked={false}
          data-css-gyrv08=""
          onClick={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="radio"
          value="blue"
        />
        <div
          data-css-cgsoeo=""
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio state demo 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#555555",
        }
      }
    >
      Selected: 
      red
    </div>
    <div
      data-css-1a26704=""
      onFocus={[Function]}
      onKeyDown={[Function]}
      onSelect={[Function]}
      role="radiogroup"
      tabIndex={0}
    >
      <div
        data-css-xp79s5=""
      >
        <label
          data-css-kn3wr0=""
        >
          <div
            data-css-1gbdc34=""
          >
            <div
              data-css-480533=""
              data-css-iwspcj=""
            >
              <div
                aria-checked={true}
                data-css-1m80hge=""
                onFocus={[Function]}
                role="radio"
                tabIndex="-1"
              >
                <div
                  data-css-16yi4o9=""
                />
              </div>
            </div>
          </div>
          <input
            checked={true}
            data-css-gyrv08=""
            onClick={[Function]}
            readOnly={true}
            tabIndex="-1"
            type="radio"
            value="red"
          />
          <div
            data-css-cgsoeo=""
          >
            Red
          </div>
        </label>
      </div>
      <div
        data-css-xp79s5=""
      >
        <label
          data-css-kn3wr0=""
        >
          <div
            data-css-1gbdc34=""
          >
            <div
              data-css-480533=""
              data-css-iwspcj=""
            >
              <div
                aria-checked={false}
                data-css-dbvyuf=""
                onFocus={[Function]}
                role="radio"
                tabIndex="-1"
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-gyrv08=""
            onClick={[Function]}
            readOnly={true}
            tabIndex="-1"
            type="radio"
            value="green"
          />
          <div
            data-css-cgsoeo=""
          >
            Green
          </div>
        </label>
      </div>
      <div
        data-css-xp79s5=""
      >
        <label
          data-css-kn3wr0=""
        >
          <div
            data-css-1gbdc34=""
          >
            <div
              data-css-480533=""
              data-css-iwspcj=""
            >
              <div
                aria-checked={false}
                data-css-dbvyuf=""
                onFocus={[Function]}
                role="radio"
                tabIndex="-1"
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-gyrv08=""
            onClick={[Function]}
            readOnly={true}
            tabIndex="-1"
            type="radio"
            value="blue"
          />
          <div
            data-css-cgsoeo=""
          >
            Blue
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
